	fbscanplot, polar-fb, pp-fb, bw-imp, pixinfo.sh : obsolete
	png_info : incorporating into icv
	pixpaste : outside scope, license
	alias-pix' : incorporating into icv
	asc2pix' : incorporating into icv
	pix-yuv', yuv-pix' : obsolete non-standard format
	texturescale : obsolete implementation
	Removed as part of distillation effort [deprecated 7.26]
video & animation tools
	anim_*', fbanim, chan_add', pixflip-fb' : outside scope
	pixfields', pixfieldsep' : outside scope
	orbit.sh, rtwalk, scriptsort, script-tab', tabinterp, tabsup,
	azel, bary
	Removed as part of distillation effort [deprecated 7.26]
signal analysis tools
	a-d', d-a', bw-a', i-a', u-a' : incorporating into cv
	d-a', d-bw', d-f', d-i', d-u' : incorporating into cv
	a-d', bw-d', c-d', f-d', i-d', u-d' : incorporating into cv
	f-d', f-i', d-f', i-f', u-f', u-bw' : incorporating into cv
	d2-c', double-asc' : incorporating into cv
	Removed as part of distillation effort [deprecated 7.26]
infrared & shapefactor tools
	all_sf', if-X, ifdisp, pictx, showterm, firpass, secpass, shapefact
	ssamp-bw, ssampview', ssampview.tcl'
	Removed as part of distillation effort [deprecated 7.26]
misc tools
	fix_polysolids' : obsolete primitive
	remapid : superseded by reid+remat
	buffer : unnecesary network/stream buffering tool
	hex : superseded by hexdump
	Removed as part of distillation effort [deprecated 7.26]
include/bu/hash.h
	bu_hash_tbl_find, bu_set_hash_value, bu_get_hash_value, bu_get_hash_key,
	bu_hash_tbl_add, bu_hash_tbl_print, bu_hash_tbl_free, bu_hash_tbl_first,
	bu_hash_tbl_next, bu_hash_tbl_traverse, public structs bu_hash_entry and
	bu_hash_tbl will be made private.
	Replaced with new API [deprecated 7.26]
include/bu/cmd.h
	remove struct bu_cmdhist and struct bu_cmdhist_obj [deprecated 7.26]
	BU_CMDHIST_NULL, BU_CMDHIST_OBJ_NULL, bu_cmdhist_histor, bu_cmdhist_add,
	bu_cmdhist_curr, bu_cmdhist_nest, bu_cmdhist_prev [deprecated 7.26]
fb-rle, rle-fb, bw-rle, pix-rle, rle-pix